--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ certifi==2022.6.15
 cloudinary==1.29.0
 dj-database-url==0.5.0
 Django==4.0.5
+django-cors-headers==3.13.0
 django-heroku==0.3.1
 djangorestframework==3.13.1
 gunicorn==20.1.0
 psycopg2==2.9.3
+PyJWT==1.7.1
 python-decouple==3.6
 pytz==2022.1
 six==1.16.0
